# JobCrew

./: .env.example  .gitignore  AGENT.md  README.md  agents.py  main.py  pyproject.toml  requirements.txt  run.py
docs/: AGENTS.md  MIGRATION.md  README.md  RESTRUCTURING_SUMMARY.md
src/: __init__.py
src/jobcrew/: __init__.py  agents.py  main.py  tasks.py
src/jobcrew/tools/: __init__.py  search_tools.py
tools/: search_tools.py
